tests/paczka1/fuzzy1/86776244.err
Error in line 3: A129 A227 42,67
Error in line 15: hrq94C ATT7 7,1
Error in line 17: Tql4td7 A912 11,U
Error in line 9: FhBlcUL A129 74,4
Error in line 6: Tql4td7 A912 3,0
Error in line 19: FhBlcUL A227 91,5
Error in line 33: Tql4td7 A227 2,9
